@@ -40,8 +40,8 @@ import org.elasticsearch.xpack.spatial.util.GeoTestUtils;
 
 import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.function.Function;
 
 import static org.hamcrest.Matchers.equalTo;
@@ -63,10 +63,11 @@ public class GeoShapeCentroidAggregatorTests extends AggregatorTestCase {
                 "field",
                 true,
                 true,
+                randomBoolean(),
                 Orientation.RIGHT,
                 null,
                 null,
-                Collections.emptyMap()
+                Map.of()
             );
             try (IndexReader reader = w.getReader()) {
                 IndexSearcher searcher = new IndexSearcher(reader);
@@ -91,15 +92,25 @@ public class GeoShapeCentroidAggregatorTests extends AggregatorTestCase {
                     "another_field",
                     true,
                     true,
+                    randomBoolean(),
                     Orientation.RIGHT,
                     null,
                     null,
-                    Collections.emptyMap()
+                    Map.of()
                 );
                 InternalGeoCentroid result = searchAndReduce(searcher, new AggTestConfig(aggBuilder, fieldType));
                 assertNull(result.centroid());
 
-                fieldType = new GeoShapeWithDocValuesFieldType("field", true, true, Orientation.RIGHT, null, null, Collections.emptyMap());
+                fieldType = new GeoShapeWithDocValuesFieldType(
+                    "field",
+                    true,
+                    true,
+                    randomBoolean(),
+                    Orientation.RIGHT,
+                    null,
+                    null,
+                    Map.of()
+                );
                 result = searchAndReduce(searcher, new AggTestConfig(aggBuilder, fieldType));
                 assertNull(result.centroid());
                 assertFalse(AggregationInspectionHelper.hasValue(result));
@@ -125,10 +136,11 @@ public class GeoShapeCentroidAggregatorTests extends AggregatorTestCase {
                     "another_field",
                     true,
                     true,
+                    randomBoolean(),
                     Orientation.RIGHT,
                     null,
                     null,
-                    Collections.emptyMap()
+                    Map.of()
                 );
                 InternalGeoCentroid result = searchAndReduce(searcher, new AggTestConfig(aggBuilder, fieldType));
                 assertThat(result.centroid(), equalTo(expectedCentroid));
@@ -199,10 +211,11 @@ public class GeoShapeCentroidAggregatorTests extends AggregatorTestCase {
             "field",
             true,
             true,
+            randomBoolean(),
             Orientation.RIGHT,
             null,
             null,
-            Collections.emptyMap()
+            Map.of()
         );
         GeoCentroidAggregationBuilder aggBuilder = new GeoCentroidAggregationBuilder("my_agg").field("field");
         try (IndexReader reader = w.getReader()) {
